--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "grunt-i18n-template",
   "description": "Automate generation of translated HTML files from templates",
-  "version": "0.1.0",
-  "homepage": "https://github.com/rmemoria/i18n-template",
+  "version": "0.1.2",
+  "homepage": "https://github.com/rmemoria/grunt-i18n-template",
   "author": {
     "name": "Ricardo Memoria",
     "email": "rmemoria@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/rmemoria/i18n-template.git"
+    "url": "git://github.com/rmemoria/grunt-i18n-template.git"
   },
   "bugs": {
-    "url": "https://github.com/rmemoria/i18n-template/issues"
+    "url": "https://github.com/rmemoria/grunt-i18n-template/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/rmemoria/i18n-template/blob/master/LICENSE-MIT"
+      "url": "https://github.com/rmemoria/grunt-i18n-template/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
@@ -34,7 +34,8 @@
     "string": "~2.0.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "string": "~2.0.0"
   },
   "keywords": [
     "gruntplugin"
